--- a/package.json
+++ b/package.json
@@ -14,19 +14,21 @@
     "prestart:prod": "rimraf dist && npm run build",
     "start:prod": "NODE_ENV=production node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
-    "test": "jest",
-    "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
-    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test": "NODE_ENV=development jest",
+    "test:watch": "NODE_ENV=development jest --watch",
+    "test:cov": "NODE_ENV=development jest --coverage",
+    "test:debug": "NODE_ENV=development node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "NODE_ENV=development jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
-    "@nestjs/common": "^6.10.14",
-    "@nestjs/core": "^6.10.14",
+    "@nestjs/common": "^6.11.11",
+    "@nestjs/core": "^6.11.11",
     "@nestjs/jwt": "^6.1.2",
     "@nestjs/passport": "^6.2.0",
-    "@nestjs/platform-express": "^6.10.14",
+    "@nestjs/platform-express": "^6.11.11",
     "@nestjs/typeorm": "^6.3.3",
+    "@types/express": "^4.17.3",
+    "@types/node": "^13.9.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
@@ -37,29 +39,27 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.4",
-    "typeorm": "^0.2.22",
-    "@types/express": "^4.17.2",
-    "@types/node": "^13.1.6",
     "ts-node": "^8.6.0",
-    "typescript": "^3.7.4"
+    "typeorm": "^0.2.24"
   },
   "devDependencies": {
     "@nestjs/cli": "^6.13.2",
     "@nestjs/schematics": "^6.8.1",
-    "@nestjs/testing": "^6.10.14",
-    "@types/jest": "25.1.2",
+    "@nestjs/testing": "^6.11.11",
+    "@types/jest": "^25.1.2",
     "@types/supertest": "^2.0.8",
-    "@typescript-eslint/eslint-plugin": "^2.12.0",
-    "@typescript-eslint/parser": "^2.12.0",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
-    "ts-jest": "25.2.0",
+    "ts-jest": "^25.2.0",
     "ts-loader": "^6.2.1",
-    "tsconfig-paths": "^3.9.0"
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.8.3"
   },
   "jest": {
     "moduleFileExtensions": [
